--- a/style.css
+++ b/style.css
@@ -1,10 +1,39 @@
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap');
+body{
+    font-family: 'Source Sans Pro',
+    sans-serif;
+}
 h1.merah{
     color: red;
 }
 .footer{
     margin-top: 5%;
     width: auto;
-    height: 200px;
-    background-color: #011936;
+    height: auto;
+    background-color: white;
+    box-shadow: 0px 0px 15px rgb(218, 216, 216);
+    
     position: relative;
+    padding-top: 20px;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-bottom: 20px;
+}
+.footer p{
+    color: black;
+    font-weight: 500px;
+    text-align: left;
+}
+.logoku{
+    opacity: 0.7;
+}
+i{
+    margin-right: 20px;
+}
+.container.kat{
+    margin-top: 100px;
+}
+.h1kat{
+    text-align: center;
+    margin-bottom: 50px;
 }
