--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body{
 h1.merah{
     color: red;
 }
+span.badge.badge-primary.sizeku{
+    letter-spacing: 2px;
+}
 .footer{
     margin-top: 5%;
     width: auto;
@@ -33,7 +36,26 @@ i{
 .container.kat{
     margin-top: 100px;
 }
-.h1kat{
+h1.h1kat{
     text-align: center;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
+    font-weight: 600;
+    letter-spacing: 2px;
+}
+.container.pay{
+    margin-bottom: 200px;
+}
+.container.best-offer{
+    margin-top: 130px;
+}
+.container.best-selling{
+    margin-top: 80px;
+    margin-bottom: -50px;
+}
+h1.best-selling{
+    text-align: center;
+    font-weight: 600;
+    text-transform: capitalize;
+    margin-bottom: 30px;
+    letter-spacing: 2px;
 }
